<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.ananya.charcha.DostActivity">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#dddddd"
                android:textSize="42sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:nextFocusDown="@id/edit_text_email"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/edit_text_password"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />


            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/edit_text_gender"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />
            <EditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/bio"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                />

            <EditText
                android:id="@+id/loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/location"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                />

            <EditText
                android:id="@+id/gen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/gender"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                />

            <EditText
                android:id="@+id/prof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/prof"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                />

            <Button
                android:id="@+id/reg_butt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorText" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>